# Voice_Tranclater

./: .env  README.md  app.py  index.html  pyproject.toml  requirements.txt
